--- a/src/components/header/components/unlogged-dropdown/unloggedDropdown.scss
+++ b/src/components/header/components/unlogged-dropdown/unloggedDropdown.scss
@@ -9,7 +9,7 @@
 
   &--header {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
   }
 
   .container--header {
@@ -24,7 +24,7 @@
     &__body {
       display: flex;
       flex-direction: column;
-      justify-content: start;
+      justify-content: flex-start;
 
       &--title {
         font-size: 20px;
