--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   box-shadow: 1px 1px 1px 1px #ccc;
 }
