:construction: Building sing-up page

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,5 +2,7 @@
 
 $yellow-primary: #fddc05;
 $gray-primary: #999999;
+$gray-secondary: #f5f5f5;
+$gray-tertiary: #ccc;
 
 $text-color-primary: #333;
