--- a/src/components/phone-input/phoneInput.scss
+++ b/src/components/phone-input/phoneInput.scss
@@ -1,9 +1,10 @@
 @import "src/styles/variables";
 
-.phone-input__conatiner {
+.phone-input__container {
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin-top: 5px;
 
   input {
     background-color: $gray-secondary;
@@ -21,5 +22,14 @@
   input::placeholder {
     color: #c1c1c1;
     padding-left: 15px;
+  }
+
+  &--error {
+    color: red;
+    font-size: 0.875em;
+    text-align: start;
+    padding-left: 10px;
+    margin-top: 5px;
+    height: 15px;
   }
 }
