--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,8 @@ $gray-primary: #999999;
 $gray-secondary: #f5f5f5;
 $gray-tertiary: #ccc;
 
+$green-check: #8db411;
+
 $primary-blue: #0e3f9f;
 
 $text-color-primary: #333;
