--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -4,13 +4,13 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   box-shadow: 1px 1px 1px 1px #ccc;
 }
 
 .header__container--wrapper {
-  margin-top: 20px;
+  margin-top: 10px;
   padding-left: 10%;
   padding-right: 10%;
   width: 100%;
