:sparkles: Leads creation by project

--- a/src/components/header/components/user-menu/userMenu.scss
+++ b/src/components/header/components/user-menu/userMenu.scss
@@ -14,6 +14,11 @@
   .link__container {
     width: 100%;
   }
+
+  &--logout {
+    cursor: pointer;
+    margin-left: -2px;
+  }
 }
 
 .fields-menu__container {
