--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -11,7 +11,7 @@
 }
 
 .modal-content {
-  width: 560px;
+  max-width: 560px;
   position: relative;
   padding: 40px 30px 30px;
   background-color: white;
