--- a/src/pages/dashboard/components/project-card/projectCard.scss
+++ b/src/pages/dashboard/components/project-card/projectCard.scss
@@ -3,7 +3,7 @@
 .project-card__container {
   width: 378px;
   height: 570px;
-  border: 1px solid $gray-secondary;
+  border: 1px solid $border-primary;
   margin: 5px;
 
   &--header {
@@ -67,12 +67,17 @@
     img {
       width: 100%;
       height: 100%;
+      opacity: 0.9;
     }
 
     &--wrapper {
+      width: 100%;
       position: absolute;
       bottom: 0;
-      left: 5px;
+      left: 0;
+      background: rgb(0,0,0);
+      background: linear-gradient(0deg, rgba(0,0,0,0.804359243697479) 0%, rgba(253,187,45,0) 100%);
+
 
       &--message {
         color: $yellow-primary;
@@ -80,12 +85,15 @@
         font-size: 16px;
         text-align: left;
         line-height: 0.7;
+        margin-left: 5px;
       }
 
       &--price {
         color: white;
         font-size: 38px;
+        text-align: left;
         font-weight: 700;
+        margin-left: 5px;
       }
     }
   }
