--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   p {
-    margin: 10px 0;
     width: 100%;
     input {
       background-color: $gray-secondary;
@@ -22,6 +21,8 @@
         color: $gray-primary;
       }
     }
+
+    margin: 10px 0 5px;
   }
 
   &--error {
@@ -29,7 +30,6 @@
     font-size: 0.875em;
     text-align: start;
     padding-left: 10px;
-    margin-top: -6px;
     height: 15px;
   }
 }
