--- a/src/index.scss
+++ b/src/index.scss
@@ -21,3 +21,16 @@ code {
 html {
   overflow-y: auto !important;
 }
+
+.input-form__container--wrapper {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  margin-bottom: -10px;
+  margin-top: 11px;
+
+  &--space {
+    width: 10px;
+  }
+}
