--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,12 @@
 @import 'bulma/css/bulma.css';
 
 $yellow-primary: #fddc05;
+$yellow-secondary: #f4da36;
 $gray-primary: #999999;
 $gray-secondary: #f5f5f5;
 $gray-tertiary: #ccc;
+
+$gray-nav-bar: #f1f1f3;
 
 $border-primary: #d0d0d0;
 
